# pardploy

./: .gitignore  AGENTS.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  skills-lock.json  start-dev.sh
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: AuthHandlers.rs  SystemHandlers.rs
backend/src/middlewares/: auth_middleware.rs
backend/src/models/: SystemModel.rs
backend/src/routes/: AuthRoutes.rs  SystemRoutes.rs
clear/: Cargo.toml
clear/src/: main.rs
clear/src/db/: mod.rs
clear/src/handlers/: AuthHandlers.rs
clear/src/models/: UserModel.rs
clear/src/routes/: AuthRoutes.rs
frontend/: vite.config.ts
ui/web/: README.md  components.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/web/src/: App.tsx  main.tsx
ui/web/src/app/: router.tsx
ui/web/src/app/private/(MainLayout)/: MainLayout.tsx
ui/web/src/app/private/(MainLayout)/components/: BreadcrumbNav.tsx  SidebarAdmin.tsx  SidebarUser.tsx  UserMenu.tsx
ui/web/src/app/private/(MainLayout)/containers/: PageContainers.tsx
ui/web/src/app/private/(MainLayout)/dashboard/: PageDashboard.tsx
ui/web/src/app/private/(MainLayout)/logs/: PageLogs.tsx
ui/web/src/app/public/: PageLogin.tsx  PageNotFound.tsx  PageRegister.tsx  PageRequirements.tsx
ui/web/src/shared/errors/: index.ts
ui/web/src/shared/guards/: AuthGuard.tsx  PublicGuard.tsx
ui/web/src/shared/hooks/: use-auth.ts
ui/web/src/shared/providers/: MainProviders.tsx
ui/web/src/shared/types/: system.ts
ui/web/src/shared/utils/: api-service.ts  auth.ts  system.ts
(+36 files in other folders)
